Add algorithm testing ground

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SOLUTION_LIBRARY_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-set(SOLUTION_LIBRARY_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(SOLUTION_LIBRARY_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/solution)
 set(APP_BINARY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-message(${SOLUTION_LIBRARY_LIB_DIRECTORY})
+enable_testing()
 
 add_subdirectory(solution)
+add_subdirectory(tests)
 
 add_executable(algorithmic_questions_ground main.cpp)
 
